# DTSStudio

./: .gitignore  .gitmodules  README.md  components.json  devcontainer.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
emulator/: CMakeLists.txt
emulator/include/emu/: address_space.hpp  utils.hpp
emulator/include/emu/devices/: 8250_uart.hpp  ram.hpp
emulator/include/emu/riscv/: core.hpp  emulator.hpp  instructions.hpp  register.hpp  (+2 more)
emulator/source/riscv/: core.cpp  emulator.cpp  machine_mode_firmware.cpp
frontend/: App.css  App.tsx  index.css  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/components/: main_menu_bar.tsx  terminal.tsx  titlebar.tsx
frontend/components/editor/: device-tree.ts
frontend/src/: App.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: footer.tsx  main_menu_bar.tsx  titlebar.tsx
lib/: CMakeLists.txt
lib/emulator/: CMakeLists.txt
lib/interface/: CMakeLists.txt
lib/interface/source/: interface.cpp
main/: CMakeLists.txt  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
main/capabilities/: default.json
main/lib/emulator/: Cargo.toml  build.rs
main/lib/emulator/lib/: CMakeLists.txt
main/lib/emulator/lib/source/: ffi.cpp
main/lib/interface/: Cargo.toml  build.rs
main/resources/: device-tree.dtb
main/source/: main.cpp
main/src/: lib.rs
old/: CMakeLists.txt
old/main/: CMakeLists.txt
(+7 files in other folders)
